--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
+
 /* Write your global styles here, in PostCSS syntax */
 
 @tailwind base;
